<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.1.4</version>
	</parent>

	<groupId>com.student</groupId>
	<artifactId>dental-service-core</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>dental-service</name>
	<description>Demo project for Spring Boot</description>
	<packaging>pom</packaging>

	<modules>
		<module>gateway-service</module>
		<module>discovery-service</module>
		<module>reservation-service</module>
        <module>api</module>
        <module>user-service</module>
		<module>config-service</module>
		<module>location-service</module>
	</modules>

	<properties>
		<java.version>17</java.version>
		<spring-cloud.version>2022.0.4</spring-cloud.version>
		<springdoc.version>2.2.0</springdoc.version>

		<lombok.version>1.18.30</lombok.version>
		<modelmapper.version>3.2.0</modelmapper.version>
		<nimbus-jwt.version>9.37</nimbus-jwt.version>
		<jib.version>3.4.0</jib.version>
		<mutation-test.version>1.15.3</mutation-test.version>
		<mutation-test-junit.version>1.2.1</mutation-test-junit.version>
		<swagger-api.version>2.2.15</swagger-api.version>

		<maven-filtering.version>3.3.1</maven-filtering.version>

		<api.version>0.0.1-SNAPSHOT</api.version>

		<snakeyaml.version>2.2</snakeyaml.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>${lombok.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springdoc</groupId>
				<artifactId>springdoc-openapi</artifactId>
				<version>${springdoc.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>io.swagger.core.v3</groupId>
				<artifactId>swagger-annotations-jakarta</artifactId>
				<version>${swagger-api.version}</version>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-dependencies</artifactId>
				<version>${spring-cloud.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.modelmapper</groupId>
				<artifactId>modelmapper</artifactId>
				<version>${modelmapper.version}</version>
			</dependency>
			<dependency>
				<groupId>com.student</groupId>
				<artifactId>api</artifactId>
				<version>${api.version}</version>
			</dependency>
			<dependency>
				<groupId>com.nimbusds</groupId>
				<artifactId>nimbus-jose-jwt</artifactId>
				<version>${nimbus-jwt.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>



	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<includes>
					<include>**/*</include>
				</includes>
				<filtering>false</filtering>
			</resource>
		</resources>

		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-maven-plugin</artifactId>
					<configuration>
						<excludes>
							<exclude>
								<groupId>org.projectlombok</groupId>
								<artifactId>lombok</artifactId>
							</exclude>
						</excludes>
					</configuration>
				</plugin>
				<plugin>
					<groupId>com.google.cloud.tools</groupId>
					<artifactId>jib-maven-plugin</artifactId>
					<version>${jib.version}</version>
					<configuration>
						<from>
							<image>eclipse-temurin:17.0.8.1_1-jre</image>
							<auth>
								<username>adamn2000</username>
								<password>dckr_pat_5R9_HPqQ5zoTvBduYSW0abexaWI</password>
							</auth>
						</from>
						<to>
							<image>registry.hub.docker.com/adamn2000/${project.artifactId}</image>
						</to>
					</configuration>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>${maven-resources-plugin.version}</version>
					<configuration>
						<nonFilteredFileExtensions>
							<nonFilteredFileExtension>pem</nonFilteredFileExtension>
							<nonFilteredFileExtension>p12</nonFilteredFileExtension>
							<nonFilteredFileExtension>jks</nonFilteredFileExtension>
						</nonFilteredFileExtensions>
					</configuration>
					<dependencies>
						<dependency>
							<groupId>org.apache.maven.shared</groupId>
							<artifactId>maven-filtering</artifactId>
							<version>${maven-filtering.version}</version>
						</dependency>
					</dependencies>
				</plugin>

				<plugin>
					<groupId>org.pitest</groupId>
					<artifactId>pitest-maven</artifactId>
					<version>${mutation-test.version}</version>
					<dependencies>
						<dependency>
							<groupId>org.pitest</groupId>
							<artifactId>pitest-junit5-plugin</artifactId>
							<version>${mutation-test-junit.version}</version>
						</dependency>
						<dependency>
							<groupId>org.pitest</groupId>
							<artifactId>pitest-html-report</artifactId>
							<version>${mutation-test.version}</version>
						</dependency>
					</dependencies>
					<configuration>
						<outputFormats>
							<outputFormat>XML</outputFormat>
							<outputFormat>HTML</outputFormat>
						</outputFormats>
						<withHistory>true</withHistory>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

</project>
